fix header alignment & remove google login btn

--- a/react-ui/src/components/Header/Header.css
+++ b/react-ui/src/components/Header/Header.css
@@ -1,3 +1,6 @@
+.right-menu-wrap {
+    margin-left: auto;
+}
 .App-header {
     background-color: #2c353a;
     height: 80px;
